Wed May  7 19:02:51 UTC 2008  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/ETCL/ETCL_include:

          Removed this directory.

        * ace/ETCL/etcl_parser_export.h:

          Relocated here from ace/ETCL/ETCL_include.

        * bin/MakeProjectCreator/config/etcl_parser.mpb:

          Renamed this file from ace_etcl_parser.mpb.

        * ace/ETCL/ETCL_l.cpp:
        * ace/ETCL/ETCL.yy
        * ace/ETCL/ETCL_Interpreter.cpp:
        * ace/ETCL/ETCL.ll:
        * ace/ETCL/ETCL_y.cpp:
        * ace/ETCL/ETCL_Interpreter.h:
        * ace/ETCL/ETCL.mpc:
        * ace/MonitorControl/MonitorControl.mpc:
        * bin/MakeProjectCreator/config/ace_mc.mpb:

          All changes in this checkin are to remove
          unnecessary things as a result of making the
          ETCL parser the only one used. The corresponding
          parser in TAO is eliminated.

Wed May  7 17:11:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_icc.GNU:
          Added ICC 11.0

Wed May  7 14:28:54 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * bin/ChangeLogEditor/FileLocatorFactory.pm:

          Changed to detect Subversion before CVS.

Wed May  7 14:12:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3319_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Added regression for bugzilla 3319

Wed May  7 10:52:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Hash_Map_Manager_T.cpp:
          Fixed GCC warning about maybe unitialised use and also
          use prefix decrement and no need for some intermediate variables

Wed May  7 08:42:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks5.x.h:
          Added ACE_HAS_4_4BSD_SENDMSG_RECVMSG

Wed May  7 07:03:29 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/Unbounded_Set.h

          Fuzz fix.
