@@ -46,12 +46,12 @@ class ACE_Unbounded_Set_Iterator : public
   ACE_Unbounded_Set_Ex_Iterator<T, ACE_Unbounded_Set_Default_Comparator<T> >
 {
 public:
-  typedef ACE_Unbounded_Set_Ex_Iterator<T, ACE_Unbounded_Set_Default_Comparator<T> > BASE;
+  typedef ACE_Unbounded_Set_Ex_Iterator<T, ACE_Unbounded_Set_Default_Comparator<T> > base_type;
 
   // = Initialization method.
   ACE_Unbounded_Set_Iterator (ACE_Unbounded_Set<T> &s, bool end = false);
   
-  ACE_Unbounded_Set_Iterator (const BASE &s);
+  ACE_Unbounded_Set_Iterator (const base_type &s);
 };
 
 /**
@@ -64,13 +64,13 @@ class ACE_Unbounded_Set_Const_Iterator : public
 {
 public:
   
-  typedef ACE_Unbounded_Set_Ex_Const_Iterator<T, ACE_Unbounded_Set_Default_Comparator<T> > BASE;
+  typedef ACE_Unbounded_Set_Ex_Const_Iterator<T, ACE_Unbounded_Set_Default_Comparator<T> > base_type;
   
   // = Initialization method.
   ACE_Unbounded_Set_Const_Iterator (const ACE_Unbounded_Set<T> &s,
                                     bool end = false);
   
-  ACE_Unbounded_Set_Const_Iterator (const BASE &s);
+  ACE_Unbounded_Set_Const_Iterator (const base_type &s);
 };
 
 /**
